--- a/src/app/components/tournament/item-tournament/item-tournament.component.less
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.less
@@ -1,3 +1,25 @@
+.burger-menu-with-buttons {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 5px;
+  padding: 5px;
+}
+
+//.burger-menu-with-buttons > * {
+//  width: 100%; /* This makes each child element take the full width of the flex container */
+//  box-sizing: border-box; /* This ensures padding and borders are included in the width calculation */
+//}
+
+//.burger-menu-with-buttons > * {
+//  flex-grow: 1;
+//}
+
+//.burger-menu-with-buttons > *:not(:last-child) {
+//  margin-bottom: 10px;
+//}
+
+
 .tournament_sponsor_line {
   box-sizing: border-box;
   margin-top: 5px;
