--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
@@ -32,12 +32,20 @@
                   {{ name | uppercase }}
                 }
               } @else {
-
-                <app-select-player-to-team-tournament
-                  [playerList]="availablePlayersInSport"
-                  [tournamentId]="tournamentId"
-                  [control]="getFormControl(this.playerForm, i, 'playerInSport', 'players')"
-                ></app-select-player-to-team-tournament>
+                @if (availablePlayersInSport.length > 0) {
+                  <app-select-player-to-team-tournament
+                    [playerList]="availablePlayersInSport"
+                    [tournamentId]="tournamentId"
+                    [control]="getFormControl(this.playerForm, i, 'playerInSport', 'players')"
+                  ></app-select-player-to-team-tournament>
+                } @else {
+                  <app-select-player-to-team-tournament
+                    [playerListFromTournament]="availablePlayersInTournament"
+                    [tournamentId]="tournamentId"
+                    [control]="getFormControl(this.playerForm, i, 'playerInSport', 'players')"
+                    (playerSelect)="onPlayerInSportChange($event, i)"
+                  ></app-select-player-to-team-tournament>
+                }
 
               }
             </td>
