refactoring player in team tournament, add and remove player from team to store added

--- a/src/app/components/team/item-team/item-team.component.html
+++ b/src/app/components/team/item-team/item-team.component.html
@@ -113,6 +113,7 @@
                   [availablePlayersInTournament]="availablePlayers"
                   [players]="players"
                   [positions]="allSportPositions$ | async"
+                  [deleteOrUpdate]="'deleteFromTeam'"
                 ></app-add-edit-player-to-team-tournament-table>
               }
             }
