--- a/src/app/shared/ui/select/select-player-number/select-player-number.component.html
+++ b/src/app/shared/ui/select/select-player-number/select-player-number.component.html
@@ -2,7 +2,8 @@
   *tuiLet="numbers as items"
   [formControl]="control"
   style="padding-top: 10px;"
->{{ 'enter ' | uppercase }} {{ 'player number' | uppercase }}
+>
+  <!--  {{ 'enter ' | uppercase }} {{ 'player number' | uppercase }}-->
   <tui-data-list-wrapper
     *tuiDataList
     size="l"
