--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
@@ -43,7 +43,7 @@
                     [playerListFromTournament]="availablePlayersInTournament"
                     [tournamentId]="tournamentId"
                     [control]="getFormControl(this.playerForm, i, 'playerInSport', 'players')"
-                    (playerSelect)="onPlayerInSportChange($event, i)"
+                    (playerSelect)="onPlayerSelect($event, i)"
                   ></app-select-player-to-team-tournament>
                 }
 
@@ -75,15 +75,27 @@
             </td>
             <td tuiTd>
               @if (playerFormGroup.get('playerInTeamId' + i)!.value; as id) {
-                <app-actions-buttons
-                  [id]="id"
-                  [index]="i"
-                  (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
-                  (onCancel)="onCancelButtonClick()"
-                  (onDelete)="onDeleteButtonClick('deleteDialogPlayer'+$event.id)"
-                ></app-actions-buttons>
+                @if (deleteOrUpdate == 'deleteFromTeam') {
+                  <app-actions-buttons
+                    [id]="id"
+                    [index]="i"
+                    [deleteOrUpdate]="'deleteFromTeam'"
+                    (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
+                    (onCancel)="onCancelButtonClick()"
+                    (onDeleteUpdate)="onSubmit($event.action, $event.index, $event.id)"
+                  ></app-actions-buttons>
+                } @else {
+                  <app-actions-buttons
+                    [id]="id"
+                    [index]="i"
+                    [deleteOrUpdate]="'delete'"
+                    (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
+                    (onCancel)="onCancelButtonClick()"
+                    (onDelete)="onDelete($event.id!)"
+                  ></app-actions-buttons>
+                }
                 <!--                {{ id }}-->
-                @if (players) {
+                @if (players.length > 0) {
                   <app-delete-dialog
                     [item]="playerFormGroup.get('fullName' + i)!.value"
                     (delete)="onDelete(id)"
