--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -178,6 +178,7 @@
                   @if (allSportPlayersWithPerson$ | async; as playersInSports) {
                     @if (allAvailablePlayersToAddInTournament$ | async; as availablePlayers) {
                       <app-add-edit-player-to-team-tournament-table
+                        [deleteOrUpdate]="'delete'"
                         [sportId]="sport.id!"
                         [tournamentId]="tournament.id!"
                         [playersInSport]="playersInSports"
