reactoring dialogs ids for delete

--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
@@ -82,6 +82,9 @@
                     [index]="i"
                     [deleteOrUpdate]="'deleteFromTeam'"
                     [item]="getFormDataByIndexAndKey(playerFormGroup, i, 'fullName') + ' id' + id | uppercase"
+                    [isEnabled]="isRowEnabled(i)"
+                    [isDataChanged]="isDataChanged(i)"
+                    (onEdit)="enableRowToEdit($event.index)"
                     (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
                     (onCancel)="onCancelButtonClick()"
                     (onDeleteUpdate)="onSubmit($event.action, $event.index, $event.id)"
@@ -94,6 +97,9 @@
                     [index]="i"
                     [deleteOrUpdate]="'delete'"
                     [item]="getFormDataByIndexAndKey(playerFormGroup, i, 'fullName') + ' id' + id | uppercase"
+                    [isEnabled]="isRowEnabled(i)"
+                    [isDataChanged]="isDataChanged(i)"
+                    (onEdit)="enableRowToEdit($event.index)"
                     (onDelete)="onDelete($event.id!)"
                     (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
                     (onCancel)="onCancelButtonClick()"
