--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament/add-edit-player-to-team-tournament.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament/add-edit-player-to-team-tournament.component.html
@@ -18,7 +18,7 @@
       NO AVAILABLE PERSONS
     }
     <div
-      style="display: grid; grid-template-columns: auto auto; grid-gap: 5px; justify-content: space-around"
+      style="display: grid; grid-template-columns: auto auto; grid-gap:10px; justify-content: stretch"
     >
 
       <app-select-player-position
