--- a/src/app/shared/ui/select/select-player-number/select-player-number.component.html
+++ b/src/app/shared/ui/select/select-player-number/select-player-number.component.html
@@ -3,6 +3,7 @@
   [formControl]="control"
   style="padding-top: 10px;"
 >
+  NUM.
   <!--  {{ 'enter ' | uppercase }} {{ 'player number' | uppercase }}-->
   <tui-data-list-wrapper
     *tuiDataList
