--- a/src/app/shared/ui/buttons/actions-buttons/actions-buttons.component.html
+++ b/src/app/shared/ui/buttons/actions-buttons/actions-buttons.component.html
@@ -2,6 +2,7 @@
   <!--  <tui-hosted-dropdown-->
   <!--    #dropdown-->
   <!--    [content]="content"-->
+  <!--    [(tuiDropdownOpen)]="true"-->
   <!--    [(open)]="dropdownOpen"-->
   <!--  >-->
   <!--    <button-->
@@ -16,30 +17,44 @@
   <!--    #content-->
   <!--    let-activeZone-->
   <!--  >-->
-  <app-button-icon
-    [buttonAppear]="TuiAppearance.Primary"
-    [buttonShape]="'rounded'"
-    [buttonSize]="'m'"
-    [buttonIcon]="'tuiIconEdit2'"
-    [buttonClass]="'button-edit'"
-  ></app-button-icon>
 
-  <app-button-icon
-    [buttonAppear]="'create'"
-    [buttonShape]="'rounded'"
-    [buttonSize]="'m'"
-    [buttonIcon]="'tuiIconSave'"
-    [buttonClass]="'button-update'"
-    (click)="submit('edit')"
-  ></app-button-icon>
-  @if (deleteOrUpdate == 'deleteFromTeam') {
+  @if (isEnabled) {
+    <app-button-icon
+      [buttonAppear]="TuiAppearance.Accent"
+      [buttonShape]="'rounded'"
+      [buttonSize]="'m'"
+      [buttonIcon]="'tuiIconX'"
+      [buttonClass]="'button-edit'"
+      (click)="edit()"
+    ></app-button-icon>
+  } @else {
+    <app-button-icon
+      [buttonAppear]="TuiAppearance.Primary"
+      [buttonShape]="'rounded'"
+      [buttonSize]="'m'"
+      [buttonIcon]="'tuiIconEdit2'"
+      [buttonClass]="'button-edit'"
+      (click)="edit()"
+    ></app-button-icon>
+  }
+  @if (isDataChanged) {
+    <app-button-icon
+      [buttonAppear]="'create'"
+      [buttonShape]="'rounded'"
+      [buttonSize]="'m'"
+      [buttonIcon]="'tuiIconSave'"
+      [buttonClass]="'button-update'"
+      (click)="submit('edit')"
+    ></app-button-icon>
+  }
+  @if (deleteOrUpdate == 'deleteFromTeam' && !isDataChanged) {
     <app-button-icon
       [buttonAppear]="TuiAppearance.Accent"
       [buttonShape]="'rounded'"
       [buttonSize]="'m'"
       [buttonIcon]="'tuiIconTrash'"
       [buttonClass]="'button-remove'"
-      (click)="deleteDialog()"
+      (click)="deleteDialog($event)"
     ></app-button-icon>
 
     <app-delete-dialog
@@ -47,14 +62,14 @@
       [dialogId]="'deleteDialogPlayer'+id"
       (delete)="submit('deleteFromTeam')"
     ></app-delete-dialog>
-  } @else if (deleteOrUpdate == 'delete') {
+  } @else if (deleteOrUpdate == 'delete' && !isDataChanged) {
     <app-button-icon
       [buttonAppear]="TuiAppearance.Accent"
       [buttonShape]="'rounded'"
       [buttonSize]="'m'"
       [buttonIcon]="'tuiIconTrash'"
       [buttonClass]="'button-remove'"
-      (click)="deleteDialog()"
+      (click)="deleteDialog($event)"
     ></app-button-icon>
 
     <app-delete-dialog
