--- a/src/app/shared/ui/select/select-player-position/select-player-position.component.html
+++ b/src/app/shared/ui/select/select-player-position/select-player-position.component.html
@@ -2,6 +2,7 @@
   [formControl]="control"
   style="padding-top: 10px;"
 >
+  POS.
   <!--  {{ 'enter ' | uppercase }} {{ 'player position' | uppercase }}-->
   <tui-data-list *tuiDataList>
     @for (position of positionList; track position.id) {
