--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament/add-edit-player-to-team-tournament.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament/add-edit-player-to-team-tournament.component.html
@@ -31,6 +31,11 @@
       ></app-select-player-number>
     </div>
 
+    <app-select-team
+      [teamsList]="tournamentTeams"
+      [control]="playerForm.controls['team']"
+    ></app-select-team>
+
     <p>
       <app-create-button-in-form
         [action]="action"
