pars players to team from eesl backend and front

--- a/src/app/components/team/item-team/item-team.component.html
+++ b/src/app/components/team/item-team/item-team.component.html
@@ -65,22 +65,30 @@
           [allSponsorLines]="allSponsorLines$ | async"
         ></app-add-edit-team>
 
+        <app-parse-button
+          [isLoading]="(playerInTeamTournamentIsLoading$|async)!"
+          [appear]="TuiAppearance.Primary"
+          [buttonSize]="'m'"
+          [item]="'add players from eesl'"
+          (click)="parsPlayerFromEESL()"
+        ></app-parse-button>
 
-        <tui-loader
-          class="loader"
-          [inheritColor]="true"
-          [overlay]="true"
-          [showLoader]="(playerInTeamTournamentIsLoading$|async)!"
-        >
-          <button
-            tuiButton
-            [appearance]="'primary'"
-            [size]="'m'"
-            (click)="parsPlayerFromEESL()"
-          >
-            {{ 'add players from eesl' | uppercase }}
-          </button>
-        </tui-loader>
+
+        <!--        <tui-loader-->
+        <!--          class="loader"-->
+        <!--          [inheritColor]="true"-->
+        <!--          [overlay]="true"-->
+        <!--          [showLoader]="(playerInTeamTournamentIsLoading$|async)!"-->
+        <!--        >-->
+        <!--          <button-->
+        <!--            tuiButton-->
+        <!--            [appearance]="'primary'"-->
+        <!--            [size]="'m'"-->
+        <!--            (click)="parsPlayerFromEESL()"-->
+        <!--          >-->
+        <!--            {{ 'add players from eesl' | uppercase }}-->
+        <!--          </button>-->
+        <!--        </tui-loader>-->
 
 
         <!--        @if (allAvailablePlayersToAddInTournament$ | async; as players) {-->
